src/parser/parser.output
State 129 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: funcdef

    2 funcdef: "identifier" '(' fparlist ')' ':' rtype localdefs compoundstmt
    3        | "identifier" '(' ')' ':' rtype localdefs compoundstmt

    4 fparlist: fpardef fpardefs

    5 fpardef: "identifier" ':' "reference" type
    6        | "identifier" ':' type

    7 fpardefs: /* empty */
    8         | ',' fpardef fpardefs

    9 datatype: "int"
   10         | "byte"

   11 type: datatype '[' ']'
   12     | datatype

   13 rtype: datatype
   14      | "proc"

   15 localdef: funcdef
   16         | vardef

   17 localdefs: /* empty */
   18          | localdef localdefs

   19 vardef: "identifier" ':' datatype '[' "constant" ']' ';'
   20       | "identifier" ':' datatype ';'

   21 stmt: ';'
   22     | lvalue '=' expr ';'
   23     | compoundstmt
   24     | funccall ';'
   25     | "if" '(' cond ')' stmt "else" stmt
   26     | "if" '(' cond ')' stmt
   27     | "while" '(' cond ')' stmt
   28     | "return" expr ';'
   29     | "return" ';'

   30 stmts: /* empty */
   31      | stmt stmts

   32 compoundstmt: '{' stmts '}'

   33 funccall: "identifier" '(' exprlist ')'
   34         | "identifier" '(' ')'

   35 exprlist: expr exprs

   36 expr: "constant"
   37     | "char"
   38     | lvalue
   39     | '(' expr ')'
   40     | funccall
   41     | '+' expr
   42     | '-' expr
   43     | expr '+' expr
   44     | expr '-' expr
   45     | expr '*' expr
   46     | expr '/' expr
   47     | expr '%' expr

   48 exprs: /* empty */
   49      | ',' expr exprs

   50 lvalue: "identifier" '[' expr ']'
   51       | "identifier"
   52       | "string"

   53 cond: "true"
   54     | "false"
   55     | '(' cond ')'
   56     | '!' cond
   57     | expr "==" expr
   58     | expr "!=" expr
   59     | expr '<' expr
   60     | expr '>' expr
   61     | expr "<=" expr
   62     | expr ">=" expr
   63     | cond '&' cond
   64     | cond '|' cond


Terminals, with rules where they appear

$end (0) 0
'!' (33) 56
'%' (37) 47
'&' (38) 63
'(' (40) 2 3 25 26 27 33 34 39 55
')' (41) 2 3 25 26 27 33 34 39 55
'*' (42) 45
'+' (43) 41 43
',' (44) 8 49
'-' (45) 42 44
'/' (47) 46
':' (58) 2 3 5 6 19 20
';' (59) 19 20 21 22 24 28 29
'<' (60) 59
'=' (61) 22
'>' (62) 60
'[' (91) 11 19 50
']' (93) 11 19 50
'{' (123) 32
'|' (124) 64
'}' (125) 32
error (256)
"byte" (258) 10
"else" (259) 25
"false" (260) 54
"if" (261) 25 26
"int" (262) 9
"proc" (263) 14
"reference" (264) 5
"return" (265) 28 29
"while" (266) 27
"true" (267) 53
"<=" (268) 61
">=" (269) 62
"==" (270) 57
"!=" (271) 58
"string" (272) 52
"constant" (273) 19 36
"identifier" (274) 2 3 5 6 19 20 33 34 50 51
"char" (275) 37
UNOP (276)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
program (43)
    on left: 1, on right: 0
funcdef (44)
    on left: 2 3, on right: 1 15
fparlist (45)
    on left: 4, on right: 2
fpardef (46)
    on left: 5 6, on right: 4 8
fpardefs (47)
    on left: 7 8, on right: 4 8
datatype (48)
    on left: 9 10, on right: 11 12 13 19 20
type (49)
    on left: 11 12, on right: 5 6
rtype (50)
    on left: 13 14, on right: 2 3
localdef (51)
    on left: 15 16, on right: 18
localdefs (52)
    on left: 17 18, on right: 2 3 18
vardef (53)
    on left: 19 20, on right: 16
stmt (54)
    on left: 21 22 23 24 25 26 27 28 29, on right: 25 26 27 31
stmts (55)
    on left: 30 31, on right: 31 32
compoundstmt (56)
    on left: 32, on right: 2 3 23
funccall (57)
    on left: 33 34, on right: 24 40
exprlist (58)
    on left: 35, on right: 33
expr (59)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47, on right: 22 28 35
    39 41 42 43 44 45 46 47 49 50 57 58 59 60 61 62
exprs (60)
    on left: 48 49, on right: 35 49
lvalue (61)
    on left: 50 51 52, on right: 22 38
cond (62)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64, on right: 25 26 27
    55 56 63 64


state 0

    0 $accept: . program $end

    "identifier"  shift, and go to state 1

    program  go to state 2
    funcdef  go to state 3


state 1

    2 funcdef: "identifier" . '(' fparlist ')' ':' rtype localdefs compoundstmt
    3        | "identifier" . '(' ')' ':' rtype localdefs compoundstmt

    '('  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    1 program: funcdef .

    $default  reduce using rule 1 (program)


state 4

    2 funcdef: "identifier" '(' . fparlist ')' ':' rtype localdefs compoundstmt
    3        | "identifier" '(' . ')' ':' rtype localdefs compoundstmt

    "identifier"  shift, and go to state 6
    ')'           shift, and go to state 7

    fparlist  go to state 8
    fpardef   go to state 9


state 5

    0 $accept: program $end .

    $default  accept


state 6

    5 fpardef: "identifier" . ':' "reference" type
    6        | "identifier" . ':' type

    ':'  shift, and go to state 10


state 7

    3 funcdef: "identifier" '(' ')' . ':' rtype localdefs compoundstmt

    ':'  shift, and go to state 11


state 8

    2 funcdef: "identifier" '(' fparlist . ')' ':' rtype localdefs compoundstmt

    ')'  shift, and go to state 12


state 9

    4 fparlist: fpardef . fpardefs

    ','  shift, and go to state 13

    $default  reduce using rule 7 (fpardefs)

    fpardefs  go to state 14


state 10

    5 fpardef: "identifier" ':' . "reference" type
    6        | "identifier" ':' . type

    "byte"       shift, and go to state 15
    "int"        shift, and go to state 16
    "reference"  shift, and go to state 17

    datatype  go to state 18
    type      go to state 19


state 11

    3 funcdef: "identifier" '(' ')' ':' . rtype localdefs compoundstmt

    "byte"  shift, and go to state 15
    "int"   shift, and go to state 16
    "proc"  shift, and go to state 20

    datatype  go to state 21
    rtype     go to state 22


state 12

    2 funcdef: "identifier" '(' fparlist ')' . ':' rtype localdefs compoundstmt

    ':'  shift, and go to state 23


state 13

    8 fpardefs: ',' . fpardef fpardefs

    "identifier"  shift, and go to state 6

    fpardef  go to state 24


state 14

    4 fparlist: fpardef fpardefs .

    $default  reduce using rule 4 (fparlist)


state 15

   10 datatype: "byte" .

    $default  reduce using rule 10 (datatype)


state 16

    9 datatype: "int" .

    $default  reduce using rule 9 (datatype)


state 17

    5 fpardef: "identifier" ':' "reference" . type

    "byte"  shift, and go to state 15
    "int"   shift, and go to state 16

    datatype  go to state 18
    type      go to state 25


state 18

   11 type: datatype . '[' ']'
   12     | datatype .

    '['  shift, and go to state 26

    $default  reduce using rule 12 (type)


state 19

    6 fpardef: "identifier" ':' type .

    $default  reduce using rule 6 (fpardef)


state 20

   14 rtype: "proc" .

    $default  reduce using rule 14 (rtype)


state 21

   13 rtype: datatype .

    $default  reduce using rule 13 (rtype)


state 22

    3 funcdef: "identifier" '(' ')' ':' rtype . localdefs compoundstmt

    "identifier"  shift, and go to state 27

    $default  reduce using rule 17 (localdefs)

    funcdef    go to state 28
    localdef   go to state 29
    localdefs  go to state 30
    vardef     go to state 31


state 23

    2 funcdef: "identifier" '(' fparlist ')' ':' . rtype localdefs compoundstmt

    "byte"  shift, and go to state 15
    "int"   shift, and go to state 16
    "proc"  shift, and go to state 20

    datatype  go to state 21
    rtype     go to state 32


state 24

    8 fpardefs: ',' fpardef . fpardefs

    ','  shift, and go to state 13

    $default  reduce using rule 7 (fpardefs)

    fpardefs  go to state 33


state 25

    5 fpardef: "identifier" ':' "reference" type .

    $default  reduce using rule 5 (fpardef)


state 26

   11 type: datatype '[' . ']'

    ']'  shift, and go to state 34


state 27

    2 funcdef: "identifier" . '(' fparlist ')' ':' rtype localdefs compoundstmt
    3        | "identifier" . '(' ')' ':' rtype localdefs compoundstmt
   19 vardef: "identifier" . ':' datatype '[' "constant" ']' ';'
   20       | "identifier" . ':' datatype ';'

    '('  shift, and go to state 4
    ':'  shift, and go to state 35


state 28

   15 localdef: funcdef .

    $default  reduce using rule 15 (localdef)


state 29

   18 localdefs: localdef . localdefs

    "identifier"  shift, and go to state 27

    $default  reduce using rule 17 (localdefs)

    funcdef    go to state 28
    localdef   go to state 29
    localdefs  go to state 36
    vardef     go to state 31


state 30

    3 funcdef: "identifier" '(' ')' ':' rtype localdefs . compoundstmt

    '{'  shift, and go to state 37

    compoundstmt  go to state 38


state 31

   16 localdef: vardef .

    $default  reduce using rule 16 (localdef)


state 32

    2 funcdef: "identifier" '(' fparlist ')' ':' rtype . localdefs compoundstmt

    "identifier"  shift, and go to state 27

    $default  reduce using rule 17 (localdefs)

    funcdef    go to state 28
    localdef   go to state 29
    localdefs  go to state 39
    vardef     go to state 31


state 33

    8 fpardefs: ',' fpardef fpardefs .

    $default  reduce using rule 8 (fpardefs)


state 34

   11 type: datatype '[' ']' .

    $default  reduce using rule 11 (type)


state 35

   19 vardef: "identifier" ':' . datatype '[' "constant" ']' ';'
   20       | "identifier" ':' . datatype ';'

    "byte"  shift, and go to state 15
    "int"   shift, and go to state 16

    datatype  go to state 40


state 36

   18 localdefs: localdef localdefs .

    $default  reduce using rule 18 (localdefs)


state 37

   32 compoundstmt: '{' . stmts '}'

    "if"          shift, and go to state 41
    "return"      shift, and go to state 42
    "while"       shift, and go to state 43
    "string"      shift, and go to state 44
    "identifier"  shift, and go to state 45
    ';'           shift, and go to state 46
    '{'           shift, and go to state 37

    $default  reduce using rule 30 (stmts)

    stmt          go to state 47
    stmts         go to state 48
    compoundstmt  go to state 49
    funccall      go to state 50
    lvalue        go to state 51


state 38

    3 funcdef: "identifier" '(' ')' ':' rtype localdefs compoundstmt .

    $default  reduce using rule 3 (funcdef)


state 39

    2 funcdef: "identifier" '(' fparlist ')' ':' rtype localdefs . compoundstmt

    '{'  shift, and go to state 37

    compoundstmt  go to state 52


state 40

   19 vardef: "identifier" ':' datatype . '[' "constant" ']' ';'
   20       | "identifier" ':' datatype . ';'

    '['  shift, and go to state 53
    ';'  shift, and go to state 54


state 41

   25 stmt: "if" . '(' cond ')' stmt "else" stmt
   26     | "if" . '(' cond ')' stmt

    '('  shift, and go to state 55


state 42

   28 stmt: "return" . expr ';'
   29     | "return" . ';'

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60
    ';'           shift, and go to state 61

    funccall  go to state 62
    expr      go to state 63
    lvalue    go to state 64


state 43

   27 stmt: "while" . '(' cond ')' stmt

    '('  shift, and go to state 65


state 44

   52 lvalue: "string" .

    $default  reduce using rule 52 (lvalue)


state 45

   33 funccall: "identifier" . '(' exprlist ')'
   34         | "identifier" . '(' ')'
   50 lvalue: "identifier" . '[' expr ']'
   51       | "identifier" .

    '('  shift, and go to state 66
    '['  shift, and go to state 67

    $default  reduce using rule 51 (lvalue)


state 46

   21 stmt: ';' .

    $default  reduce using rule 21 (stmt)


state 47

   31 stmts: stmt . stmts

    "if"          shift, and go to state 41
    "return"      shift, and go to state 42
    "while"       shift, and go to state 43
    "string"      shift, and go to state 44
    "identifier"  shift, and go to state 45
    ';'           shift, and go to state 46
    '{'           shift, and go to state 37

    $default  reduce using rule 30 (stmts)

    stmt          go to state 47
    stmts         go to state 68
    compoundstmt  go to state 49
    funccall      go to state 50
    lvalue        go to state 51


state 48

   32 compoundstmt: '{' stmts . '}'

    '}'  shift, and go to state 69


state 49

   23 stmt: compoundstmt .

    $default  reduce using rule 23 (stmt)


state 50

   24 stmt: funccall . ';'

    ';'  shift, and go to state 70


state 51

   22 stmt: lvalue . '=' expr ';'

    '='  shift, and go to state 71


state 52

    2 funcdef: "identifier" '(' fparlist ')' ':' rtype localdefs compoundstmt .

    $default  reduce using rule 2 (funcdef)


state 53

   19 vardef: "identifier" ':' datatype '[' . "constant" ']' ';'

    "constant"  shift, and go to state 72


state 54

   20 vardef: "identifier" ':' datatype ';' .

    $default  reduce using rule 20 (vardef)


state 55

   25 stmt: "if" '(' . cond ')' stmt "else" stmt
   26     | "if" '(' . cond ')' stmt

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 77
    lvalue    go to state 64
    cond      go to state 78


state 56

   36 expr: "constant" .

    $default  reduce using rule 36 (expr)


state 57

   37 expr: "char" .

    $default  reduce using rule 37 (expr)


state 58

   41 expr: '+' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 79
    lvalue    go to state 64


state 59

   42 expr: '-' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 80
    lvalue    go to state 64


state 60

   39 expr: '(' . expr ')'

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 81
    lvalue    go to state 64


state 61

   29 stmt: "return" ';' .

    $default  reduce using rule 29 (stmt)


state 62

   40 expr: funccall .

    $default  reduce using rule 40 (expr)


state 63

   28 stmt: "return" expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86
    ';'  shift, and go to state 87


state 64

   38 expr: lvalue .

    $default  reduce using rule 38 (expr)


state 65

   27 stmt: "while" '(' . cond ')' stmt

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 77
    lvalue    go to state 64
    cond      go to state 88


state 66

   33 funccall: "identifier" '(' . exprlist ')'
   34         | "identifier" '(' . ')'

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60
    ')'           shift, and go to state 89

    funccall  go to state 62
    exprlist  go to state 90
    expr      go to state 91
    lvalue    go to state 64


state 67

   50 lvalue: "identifier" '[' . expr ']'

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 92
    lvalue    go to state 64


state 68

   31 stmts: stmt stmts .

    $default  reduce using rule 31 (stmts)


state 69

   32 compoundstmt: '{' stmts '}' .

    $default  reduce using rule 32 (compoundstmt)


state 70

   24 stmt: funccall ';' .

    $default  reduce using rule 24 (stmt)


state 71

   22 stmt: lvalue '=' . expr ';'

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 93
    lvalue    go to state 64


state 72

   19 vardef: "identifier" ':' datatype '[' "constant" . ']' ';'

    ']'  shift, and go to state 94


state 73

   54 cond: "false" .

    $default  reduce using rule 54 (cond)


state 74

   53 cond: "true" .

    $default  reduce using rule 53 (cond)


state 75

   39 expr: '(' . expr ')'
   55 cond: '(' . cond ')'

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 95
    lvalue    go to state 64
    cond      go to state 96


state 76

   56 cond: '!' . cond

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 77
    lvalue    go to state 64
    cond      go to state 97


state 77

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   57 cond: expr . "==" expr
   58     | expr . "!=" expr
   59     | expr . '<' expr
   60     | expr . '>' expr
   61     | expr . "<=" expr
   62     | expr . ">=" expr

    "<="  shift, and go to state 98
    ">="  shift, and go to state 99
    "=="  shift, and go to state 100
    "!="  shift, and go to state 101
    '<'   shift, and go to state 102
    '>'   shift, and go to state 103
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '%'   shift, and go to state 86


state 78

   25 stmt: "if" '(' cond . ')' stmt "else" stmt
   26     | "if" '(' cond . ')' stmt
   63 cond: cond . '&' cond
   64     | cond . '|' cond

    '&'  shift, and go to state 104
    '|'  shift, and go to state 105
    ')'  shift, and go to state 106


state 79

   41 expr: '+' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    $default  reduce using rule 41 (expr)


state 80

   42 expr: '-' expr .
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    $default  reduce using rule 42 (expr)


state 81

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86
    ')'  shift, and go to state 107


state 82

   43 expr: expr '+' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 108
    lvalue    go to state 64


state 83

   44 expr: expr '-' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 109
    lvalue    go to state 64


state 84

   45 expr: expr '*' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 110
    lvalue    go to state 64


state 85

   46 expr: expr '/' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 111
    lvalue    go to state 64


state 86

   47 expr: expr '%' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 112
    lvalue    go to state 64


state 87

   28 stmt: "return" expr ';' .

    $default  reduce using rule 28 (stmt)


state 88

   27 stmt: "while" '(' cond . ')' stmt
   63 cond: cond . '&' cond
   64     | cond . '|' cond

    '&'  shift, and go to state 104
    '|'  shift, and go to state 105
    ')'  shift, and go to state 113


state 89

   34 funccall: "identifier" '(' ')' .

    $default  reduce using rule 34 (funccall)


state 90

   33 funccall: "identifier" '(' exprlist . ')'

    ')'  shift, and go to state 114


state 91

   35 exprlist: expr . exprs
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86
    ','  shift, and go to state 115

    $default  reduce using rule 48 (exprs)

    exprs  go to state 116


state 92

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   50 lvalue: "identifier" '[' expr . ']'

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86
    ']'  shift, and go to state 117


state 93

   22 stmt: lvalue '=' expr . ';'
   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86
    ';'  shift, and go to state 118


state 94

   19 vardef: "identifier" ':' datatype '[' "constant" ']' . ';'

    ';'  shift, and go to state 119


state 95

   39 expr: '(' expr . ')'
   43     | expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   57 cond: expr . "==" expr
   58     | expr . "!=" expr
   59     | expr . '<' expr
   60     | expr . '>' expr
   61     | expr . "<=" expr
   62     | expr . ">=" expr

    "<="  shift, and go to state 98
    ">="  shift, and go to state 99
    "=="  shift, and go to state 100
    "!="  shift, and go to state 101
    '<'   shift, and go to state 102
    '>'   shift, and go to state 103
    '+'   shift, and go to state 82
    '-'   shift, and go to state 83
    '*'   shift, and go to state 84
    '/'   shift, and go to state 85
    '%'   shift, and go to state 86
    ')'   shift, and go to state 107


state 96

   55 cond: '(' cond . ')'
   63     | cond . '&' cond
   64     | cond . '|' cond

    '&'  shift, and go to state 104
    '|'  shift, and go to state 105
    ')'  shift, and go to state 120


state 97

   56 cond: '!' cond .
   63     | cond . '&' cond
   64     | cond . '|' cond

    $default  reduce using rule 56 (cond)


state 98

   61 cond: expr "<=" . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 121
    lvalue    go to state 64


state 99

   62 cond: expr ">=" . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 122
    lvalue    go to state 64


state 100

   57 cond: expr "==" . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 123
    lvalue    go to state 64


state 101

   58 cond: expr "!=" . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 124
    lvalue    go to state 64


state 102

   59 cond: expr '<' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 125
    lvalue    go to state 64


state 103

   60 cond: expr '>' . expr

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 126
    lvalue    go to state 64


state 104

   63 cond: cond '&' . cond

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 77
    lvalue    go to state 64
    cond      go to state 127


state 105

   64 cond: cond '|' . cond

    "false"       shift, and go to state 73
    "true"        shift, and go to state 74
    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 75
    '!'           shift, and go to state 76

    funccall  go to state 62
    expr      go to state 77
    lvalue    go to state 64
    cond      go to state 128


state 106

   25 stmt: "if" '(' cond ')' . stmt "else" stmt
   26     | "if" '(' cond ')' . stmt

    "if"          shift, and go to state 41
    "return"      shift, and go to state 42
    "while"       shift, and go to state 43
    "string"      shift, and go to state 44
    "identifier"  shift, and go to state 45
    ';'           shift, and go to state 46
    '{'           shift, and go to state 37

    stmt          go to state 129
    compoundstmt  go to state 49
    funccall      go to state 50
    lvalue        go to state 51


state 107

   39 expr: '(' expr ')' .

    $default  reduce using rule 39 (expr)


state 108

   43 expr: expr . '+' expr
   43     | expr '+' expr .
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86

    $default  reduce using rule 43 (expr)


state 109

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   44     | expr '-' expr .
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr

    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86

    $default  reduce using rule 44 (expr)


state 110

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   45     | expr '*' expr .
   46     | expr . '/' expr
   47     | expr . '%' expr

    $default  reduce using rule 45 (expr)


state 111

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   46     | expr '/' expr .
   47     | expr . '%' expr

    $default  reduce using rule 46 (expr)


state 112

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   47     | expr '%' expr .

    $default  reduce using rule 47 (expr)


state 113

   27 stmt: "while" '(' cond ')' . stmt

    "if"          shift, and go to state 41
    "return"      shift, and go to state 42
    "while"       shift, and go to state 43
    "string"      shift, and go to state 44
    "identifier"  shift, and go to state 45
    ';'           shift, and go to state 46
    '{'           shift, and go to state 37

    stmt          go to state 130
    compoundstmt  go to state 49
    funccall      go to state 50
    lvalue        go to state 51


state 114

   33 funccall: "identifier" '(' exprlist ')' .

    $default  reduce using rule 33 (funccall)


state 115

   49 exprs: ',' . expr exprs

    "string"      shift, and go to state 44
    "constant"    shift, and go to state 56
    "identifier"  shift, and go to state 45
    "char"        shift, and go to state 57
    '+'           shift, and go to state 58
    '-'           shift, and go to state 59
    '('           shift, and go to state 60

    funccall  go to state 62
    expr      go to state 131
    lvalue    go to state 64


state 116

   35 exprlist: expr exprs .

    $default  reduce using rule 35 (exprlist)


state 117

   50 lvalue: "identifier" '[' expr ']' .

    $default  reduce using rule 50 (lvalue)


state 118

   22 stmt: lvalue '=' expr ';' .

    $default  reduce using rule 22 (stmt)


state 119

   19 vardef: "identifier" ':' datatype '[' "constant" ']' ';' .

    $default  reduce using rule 19 (vardef)


state 120

   55 cond: '(' cond ')' .

    $default  reduce using rule 55 (cond)


state 121

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   61 cond: expr "<=" expr .

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86

    $default  reduce using rule 61 (cond)


state 122

   43 expr: expr . '+' expr
   44     | expr . '-' expr
   45     | expr . '*' expr
   46     | expr . '/' expr
   47     | expr . '%' expr
   62 cond: expr ">=" expr .

    '+'  shift, and go to state 82
    '-'  shift, and go to state 83
    '*'  shift, and go to state 84
    '/'  shift, and go to state 85
    '%'  shift, and go to state 86

    $default  reduce using rule 62 (cond)


state 123
